--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Login to jfrog artifact
         run:  docker login ${{ secrets.IMAGE_HOST_NAME }} -u ${{ secrets.IMAGE_USER_WRITER }} -p ${{ secrets.IMAGE_PASSWORD_WRITER }}
       - name: Build Container image
-        run:  docker build -t aartifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest .
+        run:  docker build -t artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest .
       - name: Apply push command
         run:  docker push artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
       - name: Deploy to EC2
