--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -131,8 +131,34 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
         with:
-         args: run test --image=artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
+          args: run test --image=artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
 
+  deploy_to_kuber_cluster_using_helm:
+    name: deploy to cluster using helm
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Prep helm chart
+        run: |
+           mv ./.helm/app/Chart.yaml ./.helm/app/Chart.old.yaml &&
+           cat ./.helm/app/Chart.old.yaml | grep -v appVersion > ./.helm/app/Chart.yaml &&
+           echo -e "\r\nappVersion: v${GITHUB_REF##*/}\r\n" >> ./.helm/app/Chart.yaml &&
+           cat ./.helm/app/Chart.yaml
+       - name: Deploy
+         uses: WyriHaximus/github-action-helm3@v2
+         with:
+           exec: helm upgrade APP_NAME ./.helm/app/ --install --wait --atomic --namespace=APP_NAMESPACE --set=app.name=APP_NAME --values=./.helm/app/values.yaml
+           kubeconfig: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+
+
+
+#  rm -rf kube
+#  mkdir -p kube
+#  cp "$KUBECONFIG" kube
+#  sed -i s+#SERVICE_NAME#+"$service"+g ./helm_chart/values.yaml ./helm_chart/Chart.yaml
+#  kubectl create ns "$namespace_name" || true
+#  helm upgrade --install $RELEASE_NAME -n "$namespace_name" helm_chart --atomic --timeout 300s --set image.repository="artifactory.beta.ibdp.calibo.com/newprojectteam/f/" --set image.tag="temp:latest" --set image.registrySecret="regcred"  --set service.internalport="8082"
+#
 
 
 
